Fixed issue with cursor in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,7 @@
     pointer-events: none;
     display: grid;
     place-items: center;
-
-    @apply bg-base-100;
+    background-color: white;
   }
 
   .cursor-expand {
